# ToolKitORM

./: README.md  database.sqlite  pyproject.toml
run/: main.py
tests/: __init__.py  test_code.py  test_mysql.py  test_postgresql.py  test_sqlite.py
tests/db/: test_mysql.py  test_postgresql.py  test_sqlite.py
tests/db/docker/: docker-compose.yaml
toolkitorm/: __init__.py  basetable.py  column.py  columns.py  conditions.py  storage.py  table.py
toolkitorm/db/: __init__.py  cursor.py  factory.py  session.py
toolkitorm/orm/: __init__.py
toolkitorm/orm/mysql/: __init__.py  column.py  dialect.py  table.py  types.py
toolkitorm/orm/postgresql/: __init__.py  column.py  dialect.py  table.py  types.py
toolkitorm/orm/sqlite/: __init__.py  column.py  dialect.py  table.py  types.py
toolkitorm/request/: __init__.py  cursor.py  manager.py  session.py
toolkitorm/sql/: __init__.py  base.py  basistable.py  column.py  columns.py  conditions.py  dialect.py  storage.py  table.py  types.py
toolkitorm/sql/column/: __init__.py  column.py  utils.py
toolkitorm/sql/condition/: __init__.py  base.py  comparison.py  logical.py  utils.py
toolkitorm/sql/dialect/: __init__.py  dialect.py  utils.py
toolkitorm/sql/operator/: __init__.py  base.py  comparison.py  logical.py  math.py  utils.py
toolkitorm/sql/query/: __init__.py  base.py  definition.py  manipulation.py
toolkitorm/sql/storage/: __init__.py  data.py  storage.py
toolkitorm/sql/types/: __init__.py  base.py  general.py  special.py
toolkitorm/types/: __init__.py  base.py  mysql.py  postgresql.py  sqlite.py
