[tool.poetry]
name = "ToolKitORM"
version = "0.1.0"
description = "Python ORM with type hinting"
authors = ["Igor <50257429+igorechek06@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ToolKitProject/ToolKit-ORM"
keywords = ["ToolKitORM", "ORM", "ToolKitProject"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pg8000 = "^1.23.0"
PyMySQL = "^1.0.2"
pytest = "^6.2.5"
pdoc3 = "^0.10.0"
python-lsp-server = "^1.3.3"
pylsp-mypy = "^0.5.7"
python-lsp-black = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
