[tool.poetry]
name = "ToolKitORM"
version = "0.0.0pre"
description = "Python ORM with type hinting"
authors = ["Igor <50257429+igorechek06@users.noreply.github.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ToolKitProject/ToolKit-ORM"
keywords = ["ToolKitORM", "ORM", "ToolKitProject"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pg8000 = "^1.23.0"
PyMySQL = "^1.0.2"
pdoc3 = "^0.10.0"
pytest = "^6.2.5"
mypy = "^0.931"
black = "^22.1.0"
cryptography = "^36.0.1"
types-PyMySQL = "^1.0.13"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.isort]
profile = "black"

